# Prosem

./: README.md  forFuture.scs  justBecause.scs  no_disc_test.scs  programFormal.scs
C#/: CSharpCodeShorten.scs  example.scs
C#/agent_of_check_function_argument/: agent_of_check_function_argument.scs  example.scs  sc_agent_of_check_function_argument.scs  ui_menu_file_for_check_function_argument.scs
C#/concept/: add_assignment.scs  alias.scs  bool.scs  (+38 more)
ConstrFormalization/: break.scs  class_field.scs  constructor.scs  equal.scs  extends.scs  for.scs  if-else.scs  if-else1.scs  implements.scs  less.scs  less_equal.scs  lyambda.scs  method.scs  method_call.scs  more.scs  more_equal.scs  non_equal.scs  object_call.scs  operator_addition_assignment.scs  operator_finding_the_remainder_of_division_assignment.scs  operator_multiplication_assignment.scs  operator_postfix_decrement.scs  operator_postfix_increment.scs  operator_prefix_decrement.scs  operator_prefix_increment.scs  operator_subtraction_assignment.scs  operator_unary_minus.scs  operator_unary_plus.scs  return.scs  switch.scs  while.scs
Problemsolver/InnerCycleAgent/: CMakeLists.txt  ndModule.cpp  ndModule.hpp  ndService.hpp
Problemsolver/NoDiscardAgent/: CMakeLists.txt  ndModule.cpp  ndModule.hpp  ndService.hpp
concept/: concept_access_control.scs  concept_anonymous_class.scs  concept_class.scs  concept_container.scs  concept_exception.scs  concept_floating_point_numbers.scs  concept_generic.scs  concept_key_word.scs  concept_listener.scs  concept_local_class.scs  concept_stack.scs  concept_stringPull.scs
(+191 files in other folders)
